Fix align

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -36,6 +36,13 @@ footer {
     width: 600px
   }
 
+  .center{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
     
 
   
